# backtest

./: .coverage  .env.example  .gitignore  README.md  REQUIREMENTS.md  _test_backtest.py  app.py  backtest_visualization.py  cli.py  config.minimal.yaml  config.py  config.yaml  inspect_cache.py  inspect_dominant.py  pyproject.toml  requirements-all.txt  requirements-data-sources.txt  requirements-factors.txt  requirements-llm.txt  requirements-models.txt  requirements.txt  run_backtest.py  run_diagnose_2024.py  run_full_backtest.py  run_full_experiments.py  run_full_validation.py  run_multi_oos.py  run_optimize.py  run_parameter_optimization.py  run_pybroker_full_backtest.py  run_pybroker_full_backtest_v2.py  run_validate.py  run_validation.py  unified_backtest.py
.streamlit/: config.toml
.trae/knowledges/: 20260601_001_lesson_architecture-review.md  20260601_002_lesson_architecture-critique-v2.md  20260601_003_lesson_engine-fallback-rule.md  20260602_001_workflow_strategy-enhancement-roadmap.md  20260602_002_workflow_runner-scripts-refactor-plan.md  20260607_001_debug_factor-engine-length-alignment-safeguard.md  20260608_001_feature_cross-spread-factor-integration.md  20260610_001_debug_sub-strategy-aggregator-params-injection.md  20260610_002_debug_single-symbol-best-params-oos-decline.md  20260610_003_debug_e1-multi-symbol-blend01-decline.md  20260610_004_debug_blend03-sma-still-decline.md  20260611_001_knowledge_quantml-qlib-ext-borrow.md  20260612_001_lesson_huatai-cta-methodology-report.md  20260616_001_lesson_direction2-cta-position-modulator.md  20260617_001_knowledge_direction4-p1-oi-archive.md  20260619_001_lesson_akshare-receipt-2020-2026-availability.md  20260619_002_lesson_three-factor-equal-weight-e2e.md  20260619_003_lesson_l1-daily-replay-validation.md
.trae/rules/: README.md  merge-rules.py  project_rules.archived.md  (+1 more)
components/: results.py  sidebar.py
core/: __init__.py  config.py  data_loader.py  data_loader_tqsdk.py  data_provider.py  environment.py  optimizer.py  param_manager.py  portfolio.py  report_builder.py  risk_controller.py  risk_manager.py  rollover.py  strategies.py  strategy_registry.py
data/: CFFEX.IC.csv  CFFEX.IF.csv  CFFEX.IH.csv  CFFEX.IM.csv  CFFEX.T.csv  CFFEX.TF.csv  CFFEX.TL.csv  CFFEX.TS.csv  CZCE.AP.csv  CZCE.CF.csv  CZCE.CJ.csv  CZCE.CY.csv  CZCE.FG.csv  CZCE.JR.csv  CZCE.LR.csv  CZCE.MA.csv  CZCE.OI.csv  CZCE.PF.csv  CZCE.PK.csv  CZCE.PL.csv  CZCE.PM.csv  CZCE.PR.csv  CZCE.PX.csv  CZCE.RI.csv  CZCE.RM.csv  CZCE.RS.csv  CZCE.SA.csv  CZCE.SF.csv  CZCE.SH.csv  CZCE.SM.csv  CZCE.SR.csv  CZCE.TA.csv  CZCE.UR.csv  CZCE.WH.csv  CZCE.ZC.csv  DCE.A.csv  DCE.B.csv  DCE.BB.csv  DCE.BZ.csv  DCE.C.csv  (+53 more)
docs/: strategy_validation_plan.md  strategy_validation_todos.md
examples/: run_pybroker_backtest.py
pages/: backtest.py  data_analysis.py  data_import.py  optimization.py
runner/: __init__.py  pipeline.py  pipeline_factor_ops.py  pipeline_helpers.py
scripts/: analysis_runner.py  analyze_dynamic_sweep.py  benchmark.py  compare_sweep_runs.py  exp_oi_signal.py  run_cta_backtest.py  run_cta_batch.py  run_daily_sim.py  run_factor_validated_backtest.py  run_l1_daily_replay.py  sweep_cta_hybrid_dynamic.py  sweep_direction2_fine.py  test_factors.py  test_integration.py  verify_system.py
tests/: conftest.py
utils/: __init__.py  date_utils.py  indicators.py  metrics.py  plots.py  pybroker_helpers.py  session_state.py
(+375 files in other folders)
